--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
       <div id="subAgents" class="grid gap-3 md:grid-cols-2"></div>
     </div>
 
+    <!-- Antfarm Workflows -->
+    <div>
+      <h2 class="text-sm font-semibold text-gray-400 uppercase tracking-wider mb-3">🐜 Antfarm Workflows</h2>
+      <div id="antfarmSection" class="card rounded-xl p-4">
+        <p class="text-sm text-gray-500">No workflow runs yet</p>
+      </div>
+    </div>
+
     <!-- Task Queue -->
     <div>
       <h2 class="text-sm font-semibold text-gray-400 uppercase tracking-wider mb-3">Task Queue</h2>
@@ -145,6 +153,39 @@
       }).join('');
     }
 
+    function renderAntfarm(data) {
+      const el = document.getElementById('antfarmSection');
+      if (!data || !data.runs || data.runs.length === 0) {
+        const wfs = (data?.workflows || []).map(w => 
+          `<span class="text-[10px] px-2 py-0.5 rounded-full bg-gray-800 text-gray-400">${w}</span>`
+        ).join(' ');
+        el.innerHTML = `<div class="space-y-2">
+          <p class="text-sm text-gray-500">No workflow runs yet. Available workflows:</p>
+          <div class="flex flex-wrap gap-1">${wfs}</div>
+          <p class="text-[10px] text-gray-600 mt-1">Last checked: ${data?.lastExported ? timeAgo(data.lastExported) : 'never'}</p>
+        </div>`;
+        return;
+      }
+      el.innerHTML = data.runs.map(r => {
+        const steps = (r.steps || []).map(s => {
+          const colors = { done: 'bg-blue-500', running: 'bg-green-500 pulse-dot', pending: 'bg-gray-700', failed: 'bg-red-500' };
+          const c = colors[s.status] || colors.pending;
+          return `<div class="flex items-center gap-1.5">
+            <span class="w-2 h-2 rounded-full ${c}"></span>
+            <span class="text-[10px] ${s.status === 'running' ? 'text-green-400' : s.status === 'done' ? 'text-blue-400' : 'text-gray-500'}">${s.id}</span>
+          </div>`;
+        }).join('');
+        return `<div class="space-y-2 p-3 rounded-lg bg-gray-900/50">
+          <div class="flex items-center justify-between">
+            <span class="text-sm font-medium text-white">${r.workflow || 'workflow'}</span>
+            ${badge(r.status || 'running')}
+          </div>
+          <p class="text-xs text-gray-400">${r.task || ''}</p>
+          <div class="flex flex-wrap gap-2">${steps}</div>
+        </div>`;
+      }).join('');
+    }
+
     let countdown = 30;
     function fetchData() {
       fetch('data/agents.json?t='+Date.now())
@@ -157,6 +198,11 @@
           countdown = 30;
         })
         .catch(e => console.error('Fetch error:', e));
+      
+      fetch('data/antfarm.json?t='+Date.now())
+        .then(r => r.json())
+        .then(d => renderAntfarm(d))
+        .catch(() => renderAntfarm(null));
     }
 
     setInterval(() => {
